--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -66,3 +66,8 @@ a img {
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
+
+/* line 8, ../sass/screen.scss */
+ul {
+  list-style: none;
+}
