Changed the background color a bunch to get browser-sync working.
Wanted to avoid fucking with node but meh... wasn't so bad. And now I have npm at my disposal so that's good.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -5,6 +5,17 @@
 
 @import "compass/reset";
 
-ul{
+ul {
 	list-style: none;
+}
+
+section {
+	position: fixed;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	background-color: aquamarine;
+}
+
+#one {
 }
