I now have four 100% height sections that are all a different color.
Sick af.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -16,5 +16,20 @@ ul {
 section {
 	position: relative;
 	height: 100%;
+}
+
+#one {
 	background-color: aquamarine;
+}
+
+#two {
+	background-color: teal;
+}
+
+#three {
+	background-color: blue;
+}
+
+#four {
+	background-color: purple;
 }
