Added some more sections.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -33,3 +33,15 @@ section {
 #four {
 	background-color: purple;
 }
+
+#five {
+	background-color: magenta;
+}
+
+#six {
+	background-color: pink;
+}
+
+#seven {
+	background-color: red;
+}
