--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -67,53 +67,53 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 8, ../sass/screen.scss */
+/* line 17, ../sass/screen.scss */
 html, body {
   height: 100%;
 }
 
-/* line 12, ../sass/screen.scss */
+/* line 21, ../sass/screen.scss */
 ul {
   list-style: none;
 }
 
-/* line 16, ../sass/screen.scss */
+/* line 25, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
 }
 
-/* line 21, ../sass/screen.scss */
+/* line 30, ../sass/screen.scss */
 #one {
-  background-color: aquamarine;
+  background-color: #00CC99;
 }
 
-/* line 25, ../sass/screen.scss */
+/* line 34, ../sass/screen.scss */
 #two {
-  background-color: teal;
+  background-color: #FFEE88;
 }
 
-/* line 29, ../sass/screen.scss */
+/* line 38, ../sass/screen.scss */
 #three {
-  background-color: blue;
+  background-color: #EE92C2;
 }
 
-/* line 33, ../sass/screen.scss */
+/* line 42, ../sass/screen.scss */
 #four {
-  background-color: purple;
+  background-color: #6A7FDB;
 }
 
-/* line 37, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
 #five {
-  background-color: magenta;
+  background-color: #69D1C5;
 }
 
-/* line 41, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 #six {
-  background-color: pink;
+  background-color: #FF6B6B;
 }
 
-/* line 45, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 #seven {
-  background-color: red;
+  background-color: #57E2E5;
 }
