Changed the id names of all the sections to match what they will actually be.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -27,30 +27,30 @@ section {
 	height: 100%;
 }
 
-#one {
+#video {
 	background-color: $green;
 }
 
-#two {
+#package {
 	background-color: $yellow;
 }
 
-#three {
+#uhd {
 	background-color: $pink;
 }
 
-#four {
+#stills {
 	background-color: $purple;
 }
 
-#five {
+#edit {
 	background-color: $teal;
 }
 
-#six {
+#website {
 	background-color: $red;
 }
 
-#seven {
+#contact {
 	background-color: $blue; 
 }
