--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -84,36 +84,36 @@ section {
 }
 
 /* line 30, ../sass/screen.scss */
-#one {
+#video {
   background-color: #00CC99;
 }
 
 /* line 34, ../sass/screen.scss */
-#two {
+#package {
   background-color: #FFEE88;
 }
 
 /* line 38, ../sass/screen.scss */
-#three {
+#uhd {
   background-color: #EE92C2;
 }
 
 /* line 42, ../sass/screen.scss */
-#four {
+#stills {
   background-color: #6A7FDB;
 }
 
 /* line 46, ../sass/screen.scss */
-#five {
+#edit {
   background-color: #69D1C5;
 }
 
 /* line 50, ../sass/screen.scss */
-#six {
+#website {
   background-color: #FF6B6B;
 }
 
 /* line 54, ../sass/screen.scss */
-#seven {
+#contact {
   background-color: #57E2E5;
 }
