--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -44,6 +44,21 @@ section {
 #video {
 	background-color: $green;
 	color: $dark-green;
+
+	#bgvid {
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		min-width: 100%;
+		min-height: 100%;
+		width: auto;
+		height: auto;
+    	transform: translateX(-50%) translateY(-50%);
+		-ms-transform: translateX(-50%) translateY(-50%);
+    	-moz-transform: translateX(-50%) translateY(-50%);
+    	-webkit-transform: translateX(-50%) translateY(-50%);
+    	background-size: cover;
+	}
 }
 
 #package {
