--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -78,8 +78,9 @@ section {
   position: relative;
   height: 100%;
 }
-/* line 35, ../sass/screen.scss */
-section h1 {
+
+/* line 36, ../sass/screen.scss */
+h1 {
   position: absolute;
   bottom: 0.25em;
   left: 0.25em;
@@ -87,12 +88,12 @@ section h1 {
   font-size: 10em;
 }
 
-/* line 44, ../sass/screen.scss */
+/* line 45, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 48, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 #video #bgvid {
   position: fixed;
   top: 50%;
@@ -108,37 +109,37 @@ section h1 {
   background-size: cover;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 69, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 74, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 79, ../sass/screen.scss */
+/* line 80, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 84, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 #website {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 #contact {
   background-color: #8DE4FF;
   color: #67A6BA;
