--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -31,6 +31,7 @@ ul {
 section {
 	position: relative;
 	height: 100%;
+	overflow: hidden;
 }
 
 h1 {
@@ -47,18 +48,19 @@ h1 {
 	color: $dark-green;
 
 	#bgvid {
-		position: fixed;
+		position: absolute;
 		top: 50%;
 		left: 50%;
 		min-width: 100%;
 		min-height: 100%;
-		width: auto;
+		width: 100%;
 		height: auto;
     	transform: translateX(-50%) translateY(-50%);
 		-ms-transform: translateX(-50%) translateY(-50%);
     	-moz-transform: translateX(-50%) translateY(-50%);
     	-webkit-transform: translateX(-50%) translateY(-50%);
     	background-size: cover;
+    	overflow: auto;
 	}
 }
 
