--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -49,18 +49,9 @@ h1 {
 
 	#bgvid {
 		position: absolute;
-		top: 50%;
-		left: 50%;
-		min-width: 100%;
-		min-height: 100%;
 		width: 100%;
-		height: auto;
-    	transform: translateX(-50%) translateY(-50%);
-		-ms-transform: translateX(-50%) translateY(-50%);
-    	-moz-transform: translateX(-50%) translateY(-50%);
-    	-webkit-transform: translateX(-50%) translateY(-50%);
-    	background-size: cover;
-    	overflow: auto;
+		height: 100%;
+    	object-fit: cover;
 	}
 }
 
