Background section is parallax now.
It's all ugly right now but I just needed to make sure it worked.

--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -97,43 +97,43 @@ h1 {
 /* line 50, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
+  top: -40%;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  display: none;
 }
 
-/* line 60, ../sass/screen.scss */
+/* line 61, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 65, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 70, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 75, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 80, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 #website {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 85, ../sass/screen.scss */
+/* line 86, ../sass/screen.scss */
 #contact {
   background-color: #8DE4FF;
   color: #67A6BA;
