--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -49,11 +49,12 @@ h1 {
 
 	#bgvid {
 		position: absolute;
+		top: -40%;
 		width: 100%;
 		height: 100%;
 		// object-fit does not work on IE.
     	object-fit: cover;
-    	display: none;
+    	// display: none;
 	}
 }
 
