Plugged in Lato instead of Playfair.
Not that these two fonts are interchangable. They're not. But I've decided on Raleway as my display font and lato as my body font.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -18,7 +18,7 @@ $blue: #8DE4FF;
 $dark-blue: #67A6BA;
 
 // Fonts
-$playfair: 'Playfair Display', serif;
+$lato: 'Lato', sans-serif;
 $raleway: 'Raleway', sans-serif;
 
 html, body {
