--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -89,51 +89,84 @@ h1 {
   font-size: 10em;
 }
 
-/* line 47, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
+.ruler {
+  position: absolute;
+  height: 100%;
+  width: 1px;
+  background-color: white;
+  z-index: 200;
+  opacity: 0.5;
+}
+
+/* line 55, ../sass/screen.scss */
+#center {
+  left: 50%;
+}
+
+/* line 59, ../sass/screen.scss */
+#left {
+  left: 10%;
+}
+
+/* line 63, ../sass/screen.scss */
+#right {
+  right: 10%;
+}
+
+/* line 67, ../sass/screen.scss */
+#center-x {
+  height: 1px;
+  width: 100%;
+  top: 50%;
+}
+
+/* line 74, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 51, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: 100;
 }
 
-/* line 62, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 67, ../sass/screen.scss */
+/* line 95, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 72, ../sass/screen.scss */
+/* line 100, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 77, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 82, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 #website {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 87, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 #contact {
   background-color: #8DE4FF;
   color: #67A6BA;
