--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -95,38 +95,39 @@ h1 {
   height: 100%;
   width: 1px;
   background-color: white;
-  z-index: 200;
+  z-index: 1000;
   opacity: 0.5;
+  display: none;
 }
 
-/* line 55, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 59, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 63, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 67, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 74, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 78, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -136,37 +137,54 @@ h1 {
   z-index: 100;
 }
 
-/* line 90, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
+button {
+  position: absolute;
+  top: 50%;
+  margin-top: -30px;
+  left: 50%;
+  margin-left: -90px;
+  height: 60px;
+  width: 180px;
+  background-color: red;
+  border-radius: 12px;
+  border: none;
+  z-index: 200;
+  padding: none;
+  margin: none;
+}
+
+/* line 109, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 95, ../sass/screen.scss */
+/* line 114, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 100, ../sass/screen.scss */
+/* line 119, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 105, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 110, ../sass/screen.scss */
+/* line 129, ../sass/screen.scss */
 #website {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 115, ../sass/screen.scss */
+/* line 134, ../sass/screen.scss */
 #contact {
   background-color: #8DE4FF;
   color: #67A6BA;
