--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -97,12 +97,15 @@ button {
 	margin-left: -90px;
 	height: 60px;
 	width: 180px;
-	background-color: red;
+	border: 2px solid #fff;
+	background-color: transparent;
 	border-radius: 12px;
-	border: none;
 	z-index: 200;
 	padding: none;
 	margin: none;
+	color: #fff;
+	font-family: $raleway;
+	font-size: 18px;
 }
 
 
