--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -89,7 +89,7 @@ h1 {
 }
 
 			
-button {
+a {
 	position: absolute;
 	top: 50%;
 	margin-top: -30px;
@@ -106,6 +106,22 @@ button {
 	color: #fff;
 	font-family: $raleway;
 	font-size: 18px;
+	text-align: center;
+	align: middle;
+	line-height: 60px;
+	transition: 0.2s;
+
+}
+
+a:link {
+	text-decoration: none;
+}
+
+a:hover {
+	background-color: red;
+	border-color: red;
+	transition: 0.2s;
+
 }
 
 
