--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -69,18 +69,31 @@ html, body {
 }
 
 /* line 28, ../sass/screen.scss */
+nav {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 3000;
+}
+
+/* line 35, ../sass/screen.scss */
 ul {
   list-style: none;
 }
 
-/* line 32, ../sass/screen.scss */
+/* line 39, ../sass/screen.scss */
+li {
+  display: inline;
+}
+
+/* line 43, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 38, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -89,7 +102,7 @@ h1 {
   font-size: 10em;
 }
 
-/* line 46, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -99,34 +112,34 @@ h1 {
   opacity: 0.5;
 }
 
-/* line 56, ../sass/screen.scss */
+/* line 67, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 60, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 68, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 75, ../sass/screen.scss */
+/* line 86, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 79, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -136,8 +149,8 @@ h1 {
   z-index: 100;
 }
 
-/* line 92, ../sass/screen.scss */
-a {
+/* line 103, ../sass/screen.scss */
+.button {
   position: absolute;
   top: 50%;
   margin-top: -30px;
@@ -160,50 +173,50 @@ a {
   transition: 0.2s;
 }
 
-/* line 116, ../sass/screen.scss */
-a:link {
+/* line 127, ../sass/screen.scss */
+.button:link {
   text-decoration: none;
 }
 
-/* line 120, ../sass/screen.scss */
-a:hover {
-  background-color: red;
-  border-color: red;
+/* line 131, ../sass/screen.scss */
+.button:hover {
+  background-color: #FF6B6B;
+  border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 128, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 133, ../sass/screen.scss */
+/* line 144, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 138, ../sass/screen.scss */
+/* line 149, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 143, ../sass/screen.scss */
+/* line 154, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 148, ../sass/screen.scss */
-#website {
+/* line 159, ../sass/screen.scss */
+#webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 153, ../sass/screen.scss */
-#contact {
+/* line 164, ../sass/screen.scss */
+#book {
   background-color: #8DE4FF;
   color: #67A6BA;
 }
