--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -69,37 +69,48 @@ html, body {
 }
 
 /* line 30, ../sass/screen.scss */
-nav {
+header {
   position: fixed;
   top: 0;
-  right: 10%;
+  width: 80%;
+  left: 10%;
+  height: auto;
+  background-color: red;
   z-index: 3000;
 }
 
-/* line 37, ../sass/screen.scss */
+/* line 40, ../sass/screen.scss */
+nav {
+  float: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: blue;
+}
+
+/* line 47, ../sass/screen.scss */
 ul {
   list-style: none;
 }
 
-/* line 41, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 li {
   display: inline;
 }
-/* line 43, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 li a {
   color: white;
   font-family: "Roboto", sans-serif;
   margin-left: 15px;
 }
 
-/* line 50, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 56, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -108,12 +119,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 65, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 69, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -123,34 +134,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 79, ../sass/screen.scss */
+/* line 89, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 83, ../sass/screen.scss */
+/* line 93, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 87, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 91, ../sass/screen.scss */
+/* line 101, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 98, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 102, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -160,7 +171,7 @@ a {
   z-index: 100;
 }
 
-/* line 115, ../sass/screen.scss */
+/* line 125, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -184,49 +195,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 139, ../sass/screen.scss */
+/* line 149, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 143, ../sass/screen.scss */
+/* line 153, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 151, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 156, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 161, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 166, ../sass/screen.scss */
+/* line 176, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 171, ../sass/screen.scss */
+/* line 181, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 176, ../sass/screen.scss */
+/* line 186, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
