--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -33,15 +33,13 @@ header {
 	width: 80%;
 	left: 10%;
 	height: auto;
-	background-color: $blue;
 	z-index: 3000;
 }
 
 nav {
 	float: right;
-	padding-top: 10px; 
-	padding-bottom: 10px;
-	background-color: $red;
+	padding-top: 12px; 
+	padding-bottom: 12px;
 }
 
 ul {
@@ -74,6 +72,13 @@ h1 {
 
 a {
 	text-decoration: none;
+}
+
+#logo {
+	position: absolute;
+	left: 0;
+	color: white;
+	font-size: 40px;
 }
 
 .ruler {
@@ -140,7 +145,6 @@ a {
 	font-family: $raleway;
 	font-size: 18px;
 	text-align: center;
-	align: middle;
 	line-height: 60px;
 	transition: 0.2s;
 
