--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -30,21 +30,25 @@ html, body {
 header {
 	position: fixed;
 	top: 0;
-	width: 80%;
-	left: 10%;
-	height: auto;
+	width: 100%;
+	height: 40px;
 	z-index: 3000;
-	background: $red;
+	background: rgba(black, 0.3);
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid rgba(black, 0.2);
 }
 
 nav {
-	float: right;
-	padding-top: 12px; 
-	padding-bottom: 12px;
+	position: absolute;
+	width: 80%;
+	left: 10%;
 }
 
 ul {
 	list-style: none;
+	float: right;
+	line-height: 40px;
 }
 
 li {
@@ -76,8 +80,9 @@ a {
 }
 
 #logo {
-	position: absolute;
-	left: 0;
+	float: left;
+	//position: absolute;
+	//left: 0;
 	color: white;
 	font-size: 40px;
 }
