--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -37,18 +37,21 @@ header {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	border-bottom: 1px solid rgba(black, 0.2);
+	background: $red;
 }
 
 nav {
 	position: absolute;
 	width: 80%;
 	left: 10%;
+	background: $blue;
 }
 
 ul {
 	list-style: none;
 	float: right;
 	line-height: 40px;
+	background: $pink;
 }
 
 li {
@@ -58,6 +61,10 @@ li {
 		font-family: $roboto;
 		margin-left: 40px;
 	}
+}
+
+li:first-of-type {
+	background-color: $green;
 }
 
 section {
