--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -79,41 +79,49 @@ header {
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  background: #FF6B6B;
 }
 
-/* line 42, ../sass/screen.scss */
+/* line 43, ../sass/screen.scss */
 nav {
   position: absolute;
   width: 80%;
   left: 10%;
+  background: #8DE4FF;
 }
 
-/* line 48, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 ul {
   list-style: none;
   float: right;
   line-height: 40px;
+  background: #EE92C2;
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 li {
   display: inline;
 }
-/* line 56, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 li a {
   color: white;
   font-family: "Roboto", sans-serif;
   margin-left: 40px;
 }
 
-/* line 63, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
+li:first-of-type {
+  background-color: #00CC99;
+}
+
+/* line 70, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 69, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -122,19 +130,19 @@ h1 {
   font-size: 10em;
 }
 
-/* line 78, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 82, ../sass/screen.scss */
+/* line 89, ../sass/screen.scss */
 #logo {
   float: left;
   color: white;
   font-size: 40px;
 }
 
-/* line 90, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -144,34 +152,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 100, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 104, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 108, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 112, ../sass/screen.scss */
+/* line 119, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 119, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 123, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -181,7 +189,7 @@ a {
   z-index: 100;
 }
 
-/* line 136, ../sass/screen.scss */
+/* line 143, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -204,49 +212,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 159, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 163, ../sass/screen.scss */
+/* line 170, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 171, ../sass/screen.scss */
+/* line 178, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 176, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 181, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 186, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 191, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 196, ../sass/screen.scss */
+/* line 203, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
