Styling is better but still needs work.
At least everything is the same height.

--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -76,52 +76,54 @@ header {
   height: 40px;
   z-index: 3000;
   background: rgba(0, 0, 0, 0.3);
-  padding-top: 10px;
-  padding-bottom: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  background: #FF6B6B;
+  background: #FFEE88;
 }
 
-/* line 43, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 nav {
   position: absolute;
   width: 80%;
   left: 10%;
+  height: 100%;
   background: #8DE4FF;
 }
 
-/* line 50, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 ul {
   list-style: none;
   float: right;
   line-height: 40px;
   background: #EE92C2;
+  height: 100%;
 }
 
 /* line 57, ../sass/screen.scss */
 li {
-  display: inline;
+  display: inline-block;
+  background-color: #69D1C5;
 }
-/* line 59, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 li a {
+  display: inline-block;
   color: white;
   font-family: "Roboto", sans-serif;
-  margin-left: 40px;
+  padding-left: 40px;
 }
 
-/* line 66, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 li:first-of-type {
   background-color: #00CC99;
 }
 
-/* line 70, ../sass/screen.scss */
+/* line 72, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 76, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -130,19 +132,19 @@ h1 {
   font-size: 10em;
 }
 
-/* line 85, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 91, ../sass/screen.scss */
 #logo {
   float: left;
   color: white;
   font-size: 40px;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 99, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -152,34 +154,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 107, ../sass/screen.scss */
+/* line 109, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 111, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 115, ../sass/screen.scss */
+/* line 117, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 119, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 126, ../sass/screen.scss */
+/* line 128, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 130, ../sass/screen.scss */
+/* line 132, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -189,7 +191,7 @@ a {
   z-index: 100;
 }
 
-/* line 143, ../sass/screen.scss */
+/* line 145, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -212,49 +214,49 @@ a {
   transition: 0.2s;
 }
 
-/* line 166, ../sass/screen.scss */
+/* line 168, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 170, ../sass/screen.scss */
+/* line 172, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 178, ../sass/screen.scss */
+/* line 180, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 183, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 188, ../sass/screen.scss */
+/* line 190, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 193, ../sass/screen.scss */
+/* line 195, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 198, ../sass/screen.scss */
+/* line 200, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 203, ../sass/screen.scss */
+/* line 205, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
