--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -34,16 +34,15 @@ header {
 	height: 40px;
 	z-index: 3000;
 	background: rgba(black, 0.3);
-	padding-top: 10px;
-	padding-bottom: 10px;
 	border-bottom: 1px solid rgba(black, 0.2);
-	background: $red;
+	background: $yellow;
 }
 
 nav {
 	position: absolute;
 	width: 80%;
 	left: 10%;
+	height: 100%;
 	background: $blue;
 }
 
@@ -52,14 +51,17 @@ ul {
 	float: right;
 	line-height: 40px;
 	background: $pink;
+	height: 100%;
 }
 
 li {
-	display: inline;
+	display: inline-block;
+	background-color: $teal;
 	a {
+		display: inline-block;
 		color: white;
 		font-family: $roboto;
-		margin-left: 40px;
+		padding-left: 40px;
 	}
 }
 
